# commonsat

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  LICENSE  README.md  doxygen.cfg
.github/workflows/: include-guards.yml  tests.yml
commonsat/: commonsat.h  cryptominisat.h  lingeling.h  minisat.h  picosat.h
direct_solver_usage/: .gitignore  CMakeLists.txt  Makefile  cryptominisat4.cc  lingeling.cc  minisat.cc  test.cc  test_cryptominisat.cc  test_lingeling.cc  test_minisat.cc
solvers/: Makefile
test/: .gitignore  CMakeLists.txt  cryptominisat4.cc  lingeling.cc  minisat.cc  picosat.cc  tests.cc  tests.h
util/: check-doxygen-errors.sh  quickstart.sh
